バインドマウントしたディレクトリーを read only に設定

--- a/devcon-fossil/docker-compose.yml
+++ b/devcon-fossil/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - type: bind
         source: ${SCRIPT_DIR:-./.devcontainer/script}
         target: /script
+        read_only: true
 
 volumes:
   repo-data:
