refactor: dvc-java-gemini/java-app003/pom.xmlのexec-maven-plugin設定をdebugプロファイルに移動
目的: デバッグ時のみexec-maven-pluginが有効になるように設定を整理し、
プロジェクトのビルド設定を最適化します。
影響: 既存のビルドプロセスには影響ありません。
デバッグプロファイルが有効な場合にのみexec-maven-pluginが使用されます。

---
exec-maven-pluginの設定を、ルートのpluginsセクションからdebugプロファイル内の
build/pluginsセクションへ移動しました。

---
要約: exec-maven-pluginの設定をdebugプロファイルに移動しました。

--- a/dvc-java-gemini/java-app003/pom.xml
+++ b/dvc-java-gemini/java-app003/pom.xml
@@ -136,20 +136,6 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <executable>java</executable>
-                    <arguments>
-                        <argument>-classpath</argument>
-                        <classpath />
-                        <argument>${exec.jvmargs}</argument>
-                        <argument>internal.dev.App</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.8.0</version>
@@ -217,6 +203,24 @@
             <properties>
                 <exec.jvmargs>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005</exec.jvmargs>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.1.0</version>
+                        <configuration>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>-classpath</argument>
+                                <classpath />
+                                <argument>${exec.jvmargs}</argument>
+                                <argument>internal.dev.App</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
