--- a/dvc-java-gemini/.devcontainer/Dockerfile
+++ b/dvc-java-gemini/.devcontainer/Dockerfile
@@ -1,4 +1,3 @@
-
 FROM hiro345g/dvc:jdk-202507
 
 # パッケージインストールのため root
@@ -15,5 +14,17 @@ RUN apt-get update \
 # ここから node ユーザーによる作業
 USER node
 
+# SDKMAN! のインストール先を指定
+ENV  SDKMAN_DIR=/usr/local/sdkman
+
 # gemini-cli を node ユーザーでグローバルインストール
 RUN npm install -g @google/gemini-cli
+
+# sdk コマンドを使えるように設定
+RUN bash -c 'echo "[[ -s \"/usr/local/sdkman/bin/sdkman-init.sh\" ]] && source \"/usr/local/sdkman/bin/sdkman-init.sh\"" >> /home/node/.bashrc'
+
+# SDKMAN! による spring コマンドのインストール
+RUN bash -c 'source /usr/local/sdkman/bin/sdkman-init.sh && sdk install springboot 3.5.6'
+
+# Gradle, Maven 用ユーザーフォルダの用意
+RUN bash -c 'mkdir /home/node/.m2 && mkdir /home/node/.gradle'
