build(maven): Springプロファイルのアクティブ化を設定
目的: Mavenビルドプロセスにおいて、Spring Bootアプリケーションのプロファイルアクティブ化を自動化し、開発環境と本番環境で適切な設定が適用されるようにします。
影響: 開発プロファイルでは`dev`が、本番プロファイルでは`prod`が自動的にアクティブになります。これにより、手動でのプロファイル指定が不要になり、環境ごとの設定ミスを削減します。

---
`dev`プロファイルに`<spring.profiles.active>dev</spring.profiles.active>`を追加。
`prod`プロファイルに`<spring.profiles.active>prod</spring.profiles.active>`を追加。
`prod`プロファイルのビルドに`maven-antrun-plugin`を追加し、`application.properties`内の`spring.profiles.active=dev`を`spring.profiles.active=prod`に置換するように設定。

---
要約: Springプロファイルのアクティブ化をMavenビルドで設定しました。

--- a/dvc-java-gemini/java-app004/pom.xml
+++ b/dvc-java-gemini/java-app004/pom.xml
@@ -194,19 +194,37 @@
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
+            <properties>
+                <spring.profiles.active>dev</spring.profiles.active>
+            </properties>
         </profile>
         <profile>
             <id>prod</id>
+            <properties>
+                <spring.profiles.active>prod</spring.profiles.active>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-maven-plugin</artifactId>
-                        <configuration>
-                            <profiles>
-                                <profile>prod</profile>
-                            </profiles>
-                        </configuration>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>3.1.0</version>
+                        <executions>
+                            <execution>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <replace
+                                            file="${project.build.outputDirectory}/application.properties"
+                                            token="spring.profiles.active=dev"
+                                            value="spring.profiles.active=prod" />
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
