--- a/dvc-java-gemini/java-app004/pom.xml
+++ b/dvc-java-gemini/java-app004/pom.xml
@@ -89,6 +89,15 @@
         </pluginManagement>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
@@ -147,7 +156,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.2</version>
                 <reportSets>
                     <reportSet>
                         <reports>
@@ -238,7 +247,7 @@
                         <artifactId>spring-boot-maven-plugin</artifactId>
                         <configuration>
                             <jvmArguments>
-                                -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+                                -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005
                             </jvmArguments>
                         </configuration>
                     </plugin>
