feat: java-app005 - Springプロファイル設定を動的に変更
目的: Spring Bootアプリケーションのプロファイル設定をビルド時に動的に変更できるようにします。これにより、環境に応じたプロファイル切り替えが容易になります。
影響: 既存の`application.properties`の`spring.profiles.active`が`build.gradle`で定義された`profile`変数によって上書きされるようになります。既存の`dev`プロファイルは引き続きデフォルトとして機能しますが、`profile`プロパティが指定された場合はその値が優先されます。

---
`build.gradle`に`ProcessResources`タスクを追加し、`application.properties`内の`${profile}`プレースホルダーを置換するようにしました。これにより、`spring.profiles.active`がビルド時に動的に設定可能になります。

---
要約: Springプロファイル設定を動的に変更し、環境適応性を向上

--- a/dvc-java-gemini/java-app005/build.gradle
+++ b/dvc-java-gemini/java-app005/build.gradle
@@ -55,6 +55,13 @@ tasks.named('test') {
 // Set 'dev' as the default profile if no other profile is specified.
 ext.profile = project.hasProperty('profile') ? project.getProperty('profile') : 'dev'
 
+// Filter application.properties and replace placeholders.
+tasks.withType(ProcessResources) {
+    filesMatching('**/application.properties') {
+        expand(profile: project.ext.profile)
+    }
+}
+
 // Configure the bootRun task to use the specified profile.
 tasks.withType(org.springframework.boot.gradle.tasks.run.BootRun) {
     args = ["--spring.profiles.active=${profile}"]
