feat: Dev ContainerとGoアプリ開発環境を整備
目的: Dev ContainerとGemini CLIを活用したGoアプリケーション開発環境を構築し、開発の一貫性と隔離性を確保。ローカル設定なしでプロジェクトを開始できるようにします。テストの堅牢性を向上させ、Dockerイメージビルドと実行手順を明確化。リモートデバッグ機能を追加し、開発効率を向上させます。

影響:
- 新規README.mdにより、プロジェクトのセットアップと開発手順が明確化。
- go.modの更新により、Goのバージョン管理と依存関係が改善。
- テストコードの改善により、エラーハンドリングが強化され、テストの信頼性が向上。
- Docker関連ファイルの変更により、CI/CDおよびデモ環境の構築と運用が容易に。
- VS Codeのワークスペース設定により、リモートデバッグが可能に。

---
要約: Dev ContainerとGoアプリ開発環境の初期設定と改善を行い、開発効率とテストの堅牢性を向上させました。

--- a/dvc-go-gemini/goapp001/docker/cicd/compose.yaml
+++ b/dvc-go-gemini/goapp001/docker/cicd/compose.yaml
@@ -1,3 +1,4 @@
+name: goapp001-cicd
 services:
   test:
     build:
@@ -6,9 +7,5 @@ services:
     image: goapp001-cicd:1.24.5
     container_name: goapp001-cicd
     hostname: goapp001-cicd
-    volumes:
-      - type: bind
-        source: ${LOCAL_WORKSPACE_FOLDER:-../..}
-        target: /app
     environment:
-      GOTOOLCHAIN: local
+      GOTOOLCHAIN: ${GOTOOLCHAIN:-local}
